Last corrections on report ?

--- a/posterMaster2/poster.tex
+++ b/posterMaster2/poster.tex
@@ -72,12 +72,10 @@
 
 \vspace{1cm}
 
-\begin{bclogo}[couleur=black!10,couleurBord=black!50,arrondi=0.1,logo=\hspace{17pt},barre=none]{Titre de la boite}
-Contenu de la boite azdijoioaij azidjaoizjdao azdijaozijdoaj azdoijaozijda azodijaozjda azdoijazdoa azodijaozidjaz azdijijazdoi
+\begin{bclogo}[couleur=black!10,couleurBord=black!50,arrondi=0.1,logo=\hspace{17pt},barre=none]{Objectifs du stage}
+Le stage effectué avait pour but la conception d'un \emph{DSEL} (Domain Specific Embedded Language) destiné à faciliter l'écriture et la parallélisation de codes à base de stencils. Deux aspects ont donc été étudiés : la sémantique du DSEL (quelles informations il doit être capable de comprendre) et les performances (obtenues par la parallélisation sur carte graphique par exemple).
 
-coucou
-
-azdlpazl
+Voici l'équation généal d'un stencil en deux dimensions et pour quatre points 
 \end{bclogo}
 
 \end{center}
