--- a/reportMaster2/3-Biblio.tex
+++ b/reportMaster2/3-Biblio.tex
@@ -2,11 +2,11 @@
 
 \chapter{Bibliothèque de stencils basée sur \textsf{SYCL}}
 
-Au cours du stage a été développé un DSEL de stencils sous la forme d'une bibliothèque \textsf{C++}. Ce DSEL essaie de reprendre les objectifs explicités dans le chapitre précédent, toutefois il s'agit plutôt d'une preuve de faisabilité ce pour quoi tous les objectifs n'ont pas été implémentés (mais leur intégration a été prévue). Ce chapitre se concentre sur la présentation de ce DSEL en ce qui concerne son utilisation, quelques détails d'implantations, ainsi que le travail restant.
+Au cours du stage a été développé un DSEL de stencils sous la forme d'une bibliothèque \textsf{C++}. Ce DSEL essaie de reprendre les objectifs explicités dans le chapitre précédent. Toutefois il s'agit plutôt d'une preuve de faisabilité ce pour quoi tous les objectifs n'ont pas été implémentés (mais leur intégration a été prévue). Ce chapitre se concentre sur la présentation de ce DSEL en ce qui concerne son utilisation, quelques détails d'implantation, ainsi que le travail restant.
 
 \section{Présentation générale}
 
-Le DSEL implémenté s'appuie sur deux classes pour les coefficients (constants ou variables), plusieurs classes pour la description d'une opération (tableaux d'entrées et sorties, fonctions d'accès aux éléments ou aux coefficients telles que décrites dans la section \ref{sec:obj_sem}) et une unique classe pour lancer les calculs. L'implantation ne concerne que des stencils en deux dimensions. L'écriture d'un problème à base de stencils dans le DSEL se fait en cinq étapes :
+Le DSEL implémenté s'appuie sur deux classes pour les coefficients (constants ou variables), plusieurs classes pour la description d'une opération (tableaux d'entrée et de sortie, fonctions d'accès aux éléments ou aux coefficients telles que décrites dans la section \ref{sec:obj_sem}) et une unique classe pour lancer les calculs. L'implantation ne concerne que des stencils en deux dimensions. L'écriture d'un problème à base de stencils dans le DSEL se fait en cinq étapes :
 
 \begin{enumerate}
 \item initialiser les coefficients ;
@@ -27,9 +27,9 @@ Avant de présenter plus en détail l'interface pour la création des stencils p
 \item le lancement de \emph{noyaux} de calcul sur le matériel désiré, avec configuration possible des tailles de \emph{warps}.
 \end{itemize}
 
-Celle-ci utilise notamment les \emph{lambda fonctions} et le mot-clé \textsf{auto}, introduits à partir de \textsf{C++11} et augmentés en \textsf{C++14}. Outre les éléments de langages, \textsf{triSYCL} s'appuie également sur la bibliothèque \textsf{Boost} par exemple pour la gestion des tableaux multidimensionnels, ainsi que sur \textsf{OpenMP} pour une parallélisation naïve des boucles uniquement sur CPU donc. L'implantation actuelle de \textsf{triSYCL} ne comprend pas toutes les fonctions de l'interface \textsf{SYCL}, toutefois elle est suffisante pour les besoins du DSEL.
+Celle-ci utilise notamment les \emph{lambda fonctions} et le mot-clé \textsf{auto}, introduits à partir de \textsf{C++11} et augmentés en \textsf{C++14}. Outre les éléments de langages, \textsf{triSYCL} s'appuie également sur la bibliothèque \textsf{Boost} par exemple pour la gestion des tableaux multidimensionnels, ainsi que sur \textsf{OpenMP} pour une parallélisation naïve des boucles uniquement sur CPU. L'implantation actuelle de \textsf{triSYCL} ne comprend pas toutes les fonctions de l'interface \textsf{SYCL}. Toutefois elle est suffisante pour les besoins du DSEL.
 
-Les objets \textsf{SYCL} que l'utilisateur doit manipuler sont au nombre de trois seulement : les \emph{buffers} qui sont en fait les tableaux utilisés par les calculs (il s'agit de \emph{smart containers} évoqués dans la section \ref{sec:biblio}), les \emph{accesseurs} qui permettent de simplement lire ou modifier les buffers, et enfin les \emph{queues} qui sont les piles de lancement des tâches de calculs. Les cas d'utilisation de ces objets sont inclus dans les codes présentés avec l'interface du DSEL, et les objets sont alors toujours précédés de l'espace de noms \textsf{sycl::}.
+Les objets \textsf{SYCL} que l'utilisateur doit manipuler sont au nombre de trois seulement : les \emph{buffers} qui sont en fait les tableaux utilisés par les calculs (il s'agit de \emph{smart containers} évoqués dans la section \ref{sec:biblio}), les \emph{accesseurs} qui permettent de simplement lire ou modifier les buffers, et enfin les \emph{queues} qui sont les piles de lancement des tâches de calculs. Les cas d'utilisation de ces objets sont inclus dans les codes présentés avec l'interface du DSEL, et les objets sont alors toujours précédés de l'espace de noms \textsf{sycl}.
 
 \subsection{Création des stencils}
 
@@ -45,7 +45,7 @@ coef_var2D<0, 0> c1;
 \end{minted}
 \end{listing}
 
-Une fois les coefficients initialisés, il est possible de les rassembler pour former le motif du stencil comme dans le code \ref{lst:2}. Il est d'ailleurs possible de combiner plusieurs stencils ensembles de la même manière. Toutefois il n'est possible d'agréger que des coefficients constants et du même type entre eux, ou bien que des coefficients variables entre eux, il n'est pas possible de mélanger les deux possibilités.
+Une fois les coefficients initialisés, il est possible de les rassembler pour former le motif du stencil comme dans le code \ref{lst:2}. Il est d'ailleurs possible de combiner plusieurs stencils ensemble de la même manière. Toutefois il n'est possible d'agréger que des coefficients constants et du même type entre eux, ou bien que des coefficients variables entre eux. Il n'est pas possible de mélanger les deux possibilités.
 \begin{listing}[H]
 \caption{Agrégation des coefficients pour former un stencil à cinq points.}
 \label{lst:2}
@@ -56,7 +56,7 @@ auto st = c1+c2+c3+c4+c5;
 \end{listing}
 Il est important de remarquer deux choses sur cet extrait de code : l'usage du mot-clé \textsf{auto} et l'usage de l'opérateur \textsf{+}. Le mot-clé \textsf{auto} est un type spécial qui autorise le compilateur à faire l'inférence de type lui-même (s'il le peut). Il permet de cacher à l'utilisateur le vrai type du stencil qui, étant un template, contient de nombreuses informations et serait donc fastidieux à écrire. Concrètement écrire directement le type du stencil reviendrait à écrire les propriétés du stencil sous une forme très peu lisible (tous les indices étant les uns à la suite de autres sur la même ligne), ce qu'il vaut donc mieux éviter. Quant au \textsf{+} il est utilisé pour faire la \og concaténation \fg~des coefficients mais n'a rien à voir avec l'opération mathématique qui est effectuée derrière. Lier les deux pourraient être intéressant, mais complexe à mettre en place car dans la plupart des cas, les opérations utilisées sont des additions. De plus c'est la redéfinition de l'opérateur \textsf{+} qui permet l'inférence de type par le compilateur.
 
-Les coefficients variables nécessitent l'initialisation d'un tableau tiers, dont le type est basé sur \textsf{SYCL}. Il s'agit d'un \emph{buffer} à une seule dimensions comprenant n'importe quel nombre d'éléments. Ce buffer est alors associé à une fonction d'accès, qui doit veiller à ne pas dépasser les limites du tableau (non vérifié par la compilation). L'exemple de code \ref{lst:3} présente l'équivalent d'un coefficient constant sous forme de coefficient variable.
+Les coefficients variables nécessitent l'initialisation d'un tableau tiers, dont le type est basé sur \textsf{SYCL}. Il s'agit d'un \emph{buffer} à une seule dimension comprenant n'importe quel nombre d'éléments. Ce buffer est alors associé à une fonction d'accès, qui doit veiller à ne pas dépasser les limites du tableau (non vérifié par la compilation). L'exemple de code \ref{lst:3} présente l'équivalent d'un coefficient constant sous forme de coefficient variable.
 \begin{listing}[H]
 \caption{Exemples de fonction d'accès aux coefficients.}
 \label{lst:3}
@@ -72,11 +72,11 @@ float  fac_coef(int a,int b, int c, int d,
 }
 \end{minted}
 \end{listing}
-Bien sûr dans le cas d'un coefficient variable, la fonction d'accès peut être beaucoup plus complexe et peut notamment faire intervenir les quatre variables \verb!a, b, c, d! qui sont les indices globaux puis de décalage de l'élément en cours de calcul, tandis que \verb!acc! est le tableau des coefficients. L'écriture de ces fonctions d'accès n'est pas vraiment aisé, mais elles sont nécessaires dans certains types de calculs comme la chromodynamique quantique.
+Bien sûr dans le cas d'un coefficient variable, la fonction d'accès peut être beaucoup plus complexe et peut notamment faire intervenir les quatre variables \verb!a!, \verb!b!, \verb!c!, \verb!d!, qui sont les indices globaux puis de décalage de l'élément en cours de calcul, tandis que \verb!acc! est le tableau des coefficients. L'écriture de ces fonctions d'accès n'est pas vraiment aisé, mais elles sont nécessaires dans certains types de calculs comme la chromodynamique quantique.
 
 \subsection{Application des stencils}
 
-Avant de déclencher le calcul, il reste à préciser les informations de l'opération : tableaux d'entrée et sortie notamment, ainsi que leur fonction d'accès. Ces fonctions d'accès sont plus simples puisqu'elles ne font intervenir que les indices globaux, en revanche il est nécessaire d'en définir une pour la sortie et une pour l'entrée, même si les deux accèdent aux éléments de la même façon. Ces deux versions différentes sont nécessaires car la fonction du tableau de sortie, dans lequel sont écrits les résultats, doit renvoyer des éléments modifiables et non seulement en lecture seule. Deux prototypes sont donnés en exemple dans le code \ref{lst:4} ci-dessous.
+Avant de déclencher le calcul, il reste à préciser les informations de l'opération : tableaux d'entrée et de sortie notamment, ainsi que leur fonction d'accès. Ces fonctions d'accès sont plus simples puisqu'elles ne font intervenir que les indices globaux, en revanche il est nécessaire d'en définir une pour la sortie et une pour l'entrée, même si les deux accèdent aux éléments de la même façon. Ces deux versions différentes sont nécessaires car la fonction du tableau de sortie, dans lequel sont écrits les résultats, doit renvoyer des éléments modifiables et non seulement en lecture seule. Deux prototypes sont donnés en exemple dans le code \ref{lst:4} ci-dessous.
 \begin{listing}[H]
 \caption{Exemples de fonctions d'accès aux éléments.}
 \label{lst:4}
@@ -130,7 +130,7 @@ Enfin il reste à appeler le calcul, c'est l'étape la plus simple qui ne s'appu
 \end{minted}
 \end{listing}
 
-Dans tout le code présenté, la taille de la grille n'apparaît qu'une seule fois : lors de la création des buffers. Le DSEL se charge de déterminer les zones fantômes et applique automatiquement le stencil sur le plus d'éléments possibles (les tableaux d'entrées et sorties doivent avoir les mêmes dimensions). Ceci est un bénéfice pour l'utilisateur qui n'a pas besoin de répéter des informations redondantes. %, mais aussi un risque pour lui car il est alors susceptible d'oublier l'existence même de ces zones fantômes. 
+Dans tout le code présenté, la taille de la grille n'apparaît qu'une seule fois : lors de la création des buffers. Le DSEL se charge de déterminer les zones fantômes et applique automatiquement le stencil sur le plus d'éléments possibles (les tableaux d'entrée et de sortie doivent avoir les mêmes dimensions). Ceci est un bénéfice pour l'utilisateur qui n'a pas besoin de répéter des informations redondantes. %, mais aussi un risque pour lui car il est alors susceptible d'oublier l'existence même de ces zones fantômes. 
 
 \section{Détails d'implantation}
 
@@ -168,9 +168,9 @@ auto st = st1+st2;
 {\caption{Exemple d'arbre équilibré d'un stencil à $4$ points formé en plusieurs temps, par le code \ref{lst:st_2_2pts}.}\label{fig:tree2_coef}}
 {\input{tikz4.tex}}
 \end{figure}
-Notons que la forme de ces arbre n'a pas été étudiée pour l'obtention des performances, mais il est tout à fait possible que cette forme les influencent car elle influe sur l'ordre de calcul des opérations dans le stencil. 
+Notons que la forme de ces arbres n'a pas été étudiée pour l'obtention des performances, mais il est tout à fait possible qu'elle les influence. 
 
-En supposant que certaines formes sont plus performantes que d'autres, il est primordial de pouvoir alors spécialiser le code en ayant en interne à la bibliothèque des fonctions optimisées pour certains types de motifs. Cela est rendu possible en \textsf{C++} grâce à la possibilité de redéfinir des classes et méthodes plusieurs fois avec des paramètres de template différents : la spécialisation partielle \cite{Web1}. En pratique il est même possible d'avoir des templates à l'intérieur de templates, ce qui permet un déclenchement retardé de la spécialisation d'une classe par rapport à ses méthodes. Cette méthode est notamment utilisée pour éviter à l'utilisateur de préciser le type dans les coefficients variables, celui-ci est propagé à la méthode lors de la construction des tableaux de coefficients (cf l'extrait de code \ref{lst:tab_io}). La spécialisation partielle \emph{retardée} est relativement complexe, même pour le compilateur, d'où l'introduction d'une syntaxe peu compréhensible \cite{Web2}. En revanche l'utilisateur doit préciser le type dans le cas des coefficients constants. Cela est redondant pour lui -- il passe l'information deux fois --, mais aussi pour le DSEL car tout le code doit alors être dupliqué, et possiblement de manière non statique ! En effet il est alors nécessaire de stocker la valeur du coefficient dans l'objet-même donc tous les autres objets (tels qu'une opération) utilisant le coefficient doivent avoir un lien \emph{a-un} vers lui, qui est a priori dynamique. En pratique le compilateur est parfois capable de faire une telle optimisation, mais cela n'est pas garanti, et n'a pas été vérifié.
+En supposant que certaines formes sont plus performantes que d'autres, il est primordial de pouvoir alors spécialiser le code en ayant en interne à la bibliothèque des fonctions optimisées pour certains types de motifs. Cela est rendu possible en \textsf{C++} grâce à la possibilité de redéfinir des classes et méthodes plusieurs fois avec des paramètres de template différents : la spécialisation partielle \cite{Web1}. En pratique il est même possible d'avoir des templates à l'intérieur de templates, ce qui permet un déclenchement retardé de la spécialisation d'une classe par rapport à ses méthodes. Cette méthode est notamment utilisée pour éviter à l'utilisateur de préciser le type dans les coefficients variables, celui-ci est propagé à la méthode lors de la construction des tableaux de coefficients (cf l'extrait de code \ref{lst:tab_io}). La spécialisation partielle \emph{retardée} est relativement complexe, même pour le compilateur, d'où l'introduction d'une syntaxe peu compréhensible \cite{Web2}. En revanche l'utilisateur doit préciser le type dans le cas des coefficients constants. Cela est redondant pour lui --- il passe l'information deux fois ---, mais aussi pour le DSEL car tout le code doit alors être dupliqué, et possiblement de manière non statique. En effet il est alors nécessaire de stocker la valeur du coefficient dans l'objet-même donc tous les autres objets (tels qu'une opération) utilisant le coefficient doivent avoir un lien \emph{a-un} vers lui, qui est a priori dynamique. En pratique le compilateur est parfois capable de faire une telle optimisation, mais cela n'est pas garanti, et n'a pas été vérifié.
 
 
 \subsection{Calcul statique des paramètres de tuilage}
@@ -178,7 +178,7 @@ En supposant que certaines formes sont plus performantes que d'autres, il est pr
 
 Plusieurs paramètres configurent le tuilage, notamment la taille de la zone fantôme ainsi que la taille maximum d'un warp. Ces paramètres sont calculés lors de la compilation, toujours grâce à la méta-programmation. Pour la taille de la zone fantôme, le calcul est très simple, il est fait lors de l'agrégation des coefficients (ou stencils) entre eux. En effet les objets coefficients et stencils contiennent tous les deux des indices locaux étant le maximum de décalage dans chacune des directions (quatre en deux dimensions). Le maximum est mis-à-jour à chaque agrégation, en fonction des maximums des fils dans l'arbre binaire du stencil. C'est grâce à ce maximum (un dans chaque direction) qu'est déterminée la zone fantôme qui est définie par l'\emph{offset} à partir duquel la zone de calculs commence, ainsi que la largeur totale de la zone fantôme dans chaque dimension. En deux dimensions, le stencil à quatre points est donc large de $2$ éléments dans chacune des deux dimensions, tandis que l'offset est de $1$ dans chacune des deux dimensions également.
 
-L'ensemble de ce calcul est fait de manière statique, car ces paramètres sont liés au template des classes impliquées qui elles-même sont statiques -- dans le cas des coefficients variables. Ce fonctionnement a été validé par la désassemblage d'un fichier binaire censé affiché le résultat de ce calcul, on peut y vérifier que le résultat y apparaît directement dans le code, sans aucun calcul le précédent. Ce résultat peut sembler paradoxal : c'est avec les coefficients variables que nous obtenons des paramètres statiques. Cela n'est pas contradictoire car ce qu'il se produit dans les cas des coefficients variables est une séparation totale entre l'objet définissant uniquement les indices de décalage, et l'objet permettant d'accéder aux coefficients. Par simplicité pour l'utilisateur, ces deux objets sont réunis en un seul dans le cas d'un coefficient fixe, empêchant potentiellement l'optimisation statique (selon les capacités du compilateur, non-évaluées sur cet aspect). Il s'agit là d'un parfait exemple de l'équilibre à trouver entre les trois piliers de Todd Veldhuizen pour une librairie optimisée : élégance, sûreté et rapidité.
+L'ensemble de ce calcul est fait de manière statique, car ces paramètres sont liés au template des classes impliquées qui elles-même sont statiques --- dans le cas des coefficients variables. Ce fonctionnement a été validé par la désassemblage d'un fichier binaire censé affiché le résultat de ce calcul, on peut y vérifier que le résultat y apparaît directement dans le code, sans aucun calcul le précédent. Ce résultat peut sembler paradoxal : c'est avec les coefficients variables que nous obtenons des paramètres statiques. Cela n'est pas contradictoire car ce qu'il se produit dans les cas des coefficients variables est une séparation totale entre l'objet définissant uniquement les indices de décalage, et l'objet permettant d'accéder aux coefficients. Par simplicité pour l'utilisateur, ces deux objets sont réunis en un seul dans le cas d'un coefficient fixe, empêchant potentiellement l'optimisation statique (selon les capacités du compilateur, non-évaluées sur cet aspect). Il s'agit là d'un parfait exemple de l'équilibre à trouver entre les trois piliers de Todd Veldhuizen pour une librairie optimisée : élégance, sûreté et rapidité.
 
 Une fois la zone fantôme calculée, et ainsi le nombre d'éléments à charger que va nécessiter le calcul d'une macro-tuile, il est alors possible de déterminer la taille optimale de la macro-tuile. Cette taille est déterminée de manière récursive lors de la compilation en fonction de trois paramètres configurés dans les headers, et qui sont en pratique des variables d'environnement liées au matériel : nombre de cœurs maximum dans chaque dimension pour un warp de la carte graphique, quantité maximale de mémoire locale disponible pour un warp. Il s'agit alors d'obtenir la plus grande taille possible de macro-tuile, sans dépasser la quantité de mémoire disponible. L'algorithme commence alors par la taille minimale (qu'occupe la zone fantôme) puis essaie d'incrémenter le nombre d'éléments dans une dimension (ou les deux si possible) jusqu'à ce que l'une des conditions suivantes soit fausse : soit le nombre de cœurs n'est plus suffisant, soit il ne reste plus assez de mémoire. Du point de vue de l'implantation en \textsf{C++} il s'agit d'une classe template qui possède un lien \emph{a-un} avec elle-même, à la différence près que l'objet d'elle-même qu'elle possède stocke une taille de macro-tuile incrémentée de un (dans une ou deux dimensions) ainsi qu'un booléen pour signifier l'arrêt ou non de la récursion. Suivant cette méthode, la macro-tuile ne s'adapte pas à la forme du stencil, mais cela est toujours possible grâce à la spécialisation partielle évoquée dans la sous-section précédente.
 
@@ -188,7 +188,7 @@ De même que pour la zone fantôme, le tuilage est effectué de manière statiqu
 \section{\'Evolutions possibles}
 \label{sec:evol_biblio}
 
-Le DSEL développé est une preuve de concept, ainsi tous les objectifs n'ont pas été implantés. Toutefois ceux qui l'ont été ont permis d'aborder des techniques qu'il sera possible de réutiliser pour les évolutions du DSEL. Parmi les fonctionnalités suggérées, certaines se situent au niveau de l'utilisateur et des possibilités offertes -- le \emph{front-end} -- , d'autres sont cachées et concernent les possibilités de parallélisme et d'optimisations -- le \emph{back-end}.
+Le DSEL développé est une preuve de concept, ainsi tous les objectifs n'ont pas été implantés. Toutefois ceux qui l'ont été ont permis d'aborder des techniques qu'il sera possible de réutiliser pour les évolutions du DSEL. Parmi les fonctionnalités suggérées, certaines se situent au niveau de l'utilisateur et des possibilités offertes --- le \emph{front-end} --- , d'autres sont cachées et concernent les possibilités de parallélisme et d'optimisations --- le \emph{back-end}.
 
 \subsection{Améliorations du front-end}
 
