--- a/reportMaster2/5-Concl.tex
+++ b/reportMaster2/5-Concl.tex
@@ -7,15 +7,15 @@ Au cours du stage a été développée un DSEL permettant de décrire facilement
 
 \section{Bilan}
 
-Les quelques langages (tels que \textsf{Blitz++} ou \textsf{Pochoir}) existants pour les calculs de stencils ont de nombreux désavantages à la fois dans leur syntaxe et aussi dans leur performances car peu sont adaptées aux machines parallèles hétérogènes actuelles. Après une analyse des éléments nécessaires à la description d'un stencil, des objectifs ont été énoncés concernant un futur outil dédié aux stencils. Ils concernent tout autant l'expressivité de l'outil -- le respect de la sémantique des stencils --, que les performances qu'il doit apporter -- notamment par la technique de tuilage. Ces objectifs ont pour la plupart été repris lors de l'implantation du DSEL basé sur \textsf{triSYCL} qui est opérationnel et a été testé sur un exemple de problème courant : Jacobi en deux dimensions. 
+Les quelques langages (tels que \textsf{Blitz++} ou \textsf{Pochoir}) existants pour les calculs de stencils ont de nombreux désavantages à la fois dans leur syntaxe et aussi dans leur performances car peu sont adaptés aux machines parallèles hétérogènes actuelles. Après une analyse des éléments nécessaires à la description d'un stencil, des objectifs ont été énoncés concernant un futur outil dédié aux stencils. Ils concernent tout autant l'expressivité de l'outil --- le respect de la sémantique des stencils ---, que les performances qu'il doit apporter --- notamment par la technique de tuilage. Ces objectifs ont pour la plupart été repris lors de l'implantation du DSEL basé sur \textsf{triSYCL} qui est opérationnel et a été testé sur un exemple de problème courant : Jacobi en deux dimensions. 
 
-D'autres choix auraient été possibles concernant la conception ainsi que l'implantation de l'outil. Concernant la conception il n'était pas obligatoire par exemple de se focaliser sur un DSEL : une extension de compilateur permettant de détecter automatiquement les stencils dans le code serait certainement très bénéfique pour l'utilisateur bien que difficile à réaliser. Quant à l'implantation, le DSEL aurait pu utiliser un autre langage tel que \textsf{Python} très apprécié grâce à sa syntaxe pour les tableaux : les éléments qui nourrissent les stencils. D'autres bibliothèques de parallélisation adaptées aux machines hétérogènes auraient aussi pu être utilisées par le DSEL au lieu de \textsf{triSYCL} : \textsf{SkePU} qui s'appuie sur \textsf{StarPU}, ou directement \textsf{StarPU}.
+D'autres choix auraient été possibles concernant la conception ainsi que l'implantation de l'outil. Concernant la conception il n'était pas obligatoire par exemple de se focaliser sur un DSEL : une extension de compilateur permettant de détecter automatiquement les stencils dans le code serait certainement très bénéfique pour l'utilisateur bien que difficile à réaliser. Quant à l'implantation, le DSEL aurait pu utiliser un autre langage tel que \textsf{Python}, très apprécié grâce à sa syntaxe pour les tableaux. D'autres bibliothèques de parallélisation adaptées aux machines hétérogènes auraient aussi pu être utilisées par le DSEL au lieu de \textsf{triSYCL} : \textsf{SkePU} qui s'appuie sur \textsf{StarPU}, ou directement \textsf{StarPU}.
 
 Les tests effectués ont toutefois démontré que notre approche était viable tant pour l'expressivité que pour les performances offertes par le DSEL. Il s'agit donc maintenant de le compléter afin de l'intégrer dans des applications existantes telles que \textsf{QIRAL}.
 
 \section{Perspectives}
 
-À court terme les évolutions pour le DSEL concernent le nombre de dimensions autorisées pour les stencils (uniquement deux actuellement), quelques éléments de syntaxes (pour la gestion de types complexes d'éléments telles que des matrices) et le choix automatique de l'implantation optimale (technique de tuilage ou non).
+À court terme les évolutions pour le DSEL concernent le nombre de dimensions autorisées pour les stencils (uniquement deux actuellement), quelques éléments de syntaxe (pour la gestion de types complexes d'éléments telles que des matrices) et le choix automatique de l'implantation optimale (technique de tuilage ou non).
 
 Par ailleurs la représentation en mémoire des données utilisées par les stencils mérite une attention poussée qui pourrait conduire à de nouvelles implantations, de même que la gestion des aspects distribués (si plusieurs machines distinctes connectées entre elles). Les caractéristiques des  processeurs (CPU, GPU ou \emph{many integrated core}) doivent aussi permettre d'adapter le code produit par le DSEL, et il est par exemple nécessaire d'améliorer et uniformiser la façon dont ces caractéristiques sont récupérées.
 
