--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -82,7 +82,7 @@ Du point de vue académique ce stage sera évalué à la fois par l'Enseirb-Matm
 
 \section*{Remerciements}
 
-Durant toute la durée du stage, Olivier Aumage et Denis Barthou ont répondu à mes nombreuses questions, ce pour quoi je les remercie. De plus ils m'ont laissé une grande autonomie sur le code produit, et m'ont permis de voir des aspects très divers de la problématique de base. Par ailleurs Ronan Keryell nous a fortement aidé en nous fournissant la brique de base du stage, un prototype d'implantation de SYCL. Enfin Samuel Pitoiset a eu la patience de m'aider dans l'installation de certains compilateurs, et d'améliorer l'un d'entre eux pour qu'il fonctionne avec notre outil.
+Durant toute la durée du stage, Olivier Aumage et Denis Barthou ont répondu à mes nombreuses questions, ce pour quoi je les remercie. De plus ils m'ont laissé une grande autonomie sur le code produit, et m'ont permis de voir des aspects très divers de la problématique de base. Par ailleurs Ronan Keryell nous a fortement aidés en nous fournissant la brique de base du stage, un prototype d'implantation de SYCL. Enfin Samuel Pitoiset a eu la patience de m'aider dans l'installation de certains compilateurs, et d'améliorer l'un d'entre eux pour qu'il fonctionne avec notre outil.
 
 
 \input{1-Intro.tex}
